# polytech-dijon-itc313

./: README.md
samples/00-intro/00-helloworld/: hello-world-E.cpp  hello-world-E.s
samples/01-usertypes/00-basic-types/: app.cpp
samples/01-usertypes/01-auto-types/: auto.cpp
samples/01-usertypes/02-functions/: no_function.cpp  with_function  with_function.cpp
samples/01-usertypes/02b-functions/: arithmetic.cpp  main.cpp
samples/01-usertypes/03-make/: Makefile  arithmetic.h
samples/01-usertypes/03b-make/: Makefile  arithmetic.cpp  arithmetic.h  main.cpp
samples/01-usertypes/04-cmake/: CMakeLists.txt  main.cpp
samples/01-usertypes/04b-cmake/: CMakeLists.txt
samples/01-usertypes/05-Person/: Makefile  main.cpp  person.cpp  person.h
samples/01-usertypes/06-Time/: main.cpp
samples/01-usertypes/07-Date-no-constructor/: date.cpp  date.h  main.cpp
samples/01-usertypes/08-Date-minimal-constructor/: date.cpp  date.h  main.cpp
samples/01-usertypes/09-Date-parameterized-constructor/: date.cpp  date.h  main.cpp
samples/01-usertypes/10-Date-no-default-constructor/: date.cpp  date.h  main.cpp
samples/01-usertypes/11-Date-default-parameters/: main.cpp
samples/01-usertypes/12-Date-InitialiserLists/: person.cpp  person.h
samples/01-usertypes/12-InitialiserLists/: Makefile  date.cpp  main.cpp
samples/01-usertypes/12-Person-InitialiserLists/: Makefile  date.h  main.cpp  person.cpp  person.h
samples/01-usertypes/13-Date-copy-constructor/: date.cpp  date.h  main.cpp
samples/01-usertypes/14-Date-create-valid-object/: date.cpp  date.h  main.cpp
(+138 files in other folders)
